# unlzw3

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
src/unlzw3/: __init__.py
src/unlzw3/tests/: __init__.py  test_mod.py
tests/: hello.Z  lipsum.com.Z  test_mod.py
unlzw3/: __init__.py
