[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unlzw3"
authors = [{name="Brandon Owen", email="brandon.owen@hotmail.com"}]
maintainers = [{name="Tom Kralidis", email="tomkralidis@gmail.com"}]
description = "Pure Python decompression module for .Z files compressed using Unix compress utility"
keywords = ["lzw"]
classifiers = [
"Development Status :: 4 - Beta",
"Environment :: Console",
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent",
"Programming Language :: Python :: 3",
"Topic :: System :: Archiving :: Compression",
"Topic :: Utilities"
]
dynamic = ["readme", "version"]
requires-python = ">=3.7"

[project.optional-dependencies]
tests = ["pytest"]
lint = ["flake8", "flake8-bugbear", "flake8-builtins", "flake8-blind-except", "mypy"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "unlzw3.__version__"}

[tool.black]
line-length = 100

[tool.mypy]
files = ["src"]
strict_optional = false
allow_redefinition = true
show_error_context = false
show_column_numbers = true
