[metadata]
name = unlzw3
version = attr: unlzw3.__version__
author = Brandon Owen
author_email = brandon.owen@hotmail.com
maintainer = Tom Kralidis
maintainer_email = tomkralidis@gmail.com
description = Pure Python decompression module for .Z files compressed using Unix compress utility
keywords = lzw
url = https://github.com/scivision/unlzw3
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: System :: Archiving :: Compression
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
scripts =
install_requires =

[options.extras_require]
tests =
  pytest
lint =
  flake8
  mypy